new project added

--- a/front/src/locales/ar/translation.json
+++ b/front/src/locales/ar/translation.json
@@ -6,8 +6,8 @@
     "a": "مطور ",
     "webDeveloper": "مطور ويب.",
     "fullStackDeveloper": "مطور فول ستاك.",
-  "description1": "مطور ويب فول ستاك، متخصص في بناء واجهات أمامية متجاوبة باستخدام React.js، وخلفيات قابلة للتوسع باستخدام Node.js وExpress وMongoDB.",
-"description2": "متمرس في تطوير واجهات برمجة التطبيقات RESTful، توثيقها، وتصميم واجهات مستخدم حديثة.",
+    "description1": "مطور ويب فول ستاك، متخصص في بناء واجهات أمامية متجاوبة باستخدام React.js، وخلفيات قابلة للتوسع باستخدام Node.js وExpress وMongoDB.",
+    "description2": "متمرس في تطوير واجهات برمجة التطبيقات RESTful، توثيقها، وتصميم واجهات مستخدم حديثة.",
 
     "findMe": "أين تجدني",
     "skills": "أفضل المهارات في",
@@ -51,20 +51,22 @@
     "sectionTitle": "محفظتي",
     "card": {
       "category": "تطوير تطبيقات الويب",
-      "description": "نظام إدارة تعلم كامل الميزات مبني باستخدام ‪MERN stack‬، يتيح التوثيق للمستخدم، إدارة الدورات، وتتبع التقدم"
+      "description": "نظام إدارة تعلم كامل الميزات مبني باستخدام ‪MERN stack‬، يتيح التوثيق للمستخدم، إدارة الدورات، وتتبع التقدم",
+      "description2": "تطبيق واجهة أمامية جزئي مكتمل للتجارة الإلكترونية فقط."
     }
   },
   "oneportfolio": {
     "projectDemo": "عرض المشروع",
     "fullStackRole": "دور فول ستاك",
+    "fullStackRole2": "دور UI/UX",
+
     "projectTitle": "نظام إدارة التعلم - ‪LMS‬.",
     "projectDescription": "هذا المشروع هو تطبيق ويب فول ستاك مبني باستخدام ‪React‬ للواجهة الأمامية، و‪Node.js‬ و‪Express‬ للخلفية، و‪Sequelize‬ لإدارة قاعدة البيانات. تستخدم الواجهة الأمامية ‪Material-UI (MUI)‬ لواجهة مستخدم حديثة وقابلة للاستجابة. يسمح التطبيق للمستخدمين بالتفاعل مع قاعدة البيانات من خلال واجهات برمجة التطبيقات ‪RESTful‬، مع إدارة ‪Sequelize‬ لنماذج البيانات واستعلامات قاعدة البيانات. يمكن للمستخدمين التسجيل، وتسجيل الدخول، وإدارة البيانات، مع توفير التوثيق عبر ‪JWT‬ من خلال الخادم الخلفي. يتم تحديث الواجهة الأمامية ديناميكياً استنادًا إلى إجراءات المستخدم والبيانات التي تم جلبها من الخادم، مما يضمن تجربة سلسة. تم تصميم التطبيق ليكون قابلاً للتوسع، مع معالجة أخطاء فعالة ومكونات واجهة مستخدم نظيفة.",
-    
-      "viewRepository": "عرض المستودع",
-      "viewDemo": "عرض العرض التوضيحي",
-      "demoUnavailable": "العرض التوضيحي لم يعد متاحًا. :("
-    
-    
+    "projectDescription2": "هذا تطبيق تجارة إلكترونية يعتمد فقط على الواجهة الأمامية، تم بناؤه باستخدام React.js وتصميمه باستخدام Chakra UI. يسترجع بيانات المنتجات من واجهة Fake Store API العامة لمحاكاة تجربة تسوق إلكتروني بسيطة. يتميز التطبيق بتصميم متجاوب، وعرض قائمة المنتجات، وعرض تفاصيل كل منتج، مع التنقل بين الصفحات من خلال التوجيه من جانب العميل. يُعد هذا التطبيق مثالًا بسيطًا وفعّالًا على إنشاء واجهات حديثة باستخدام React وبيانات وهمية واقعية، مما يجعله مناسبًا للتعلم أو لعرضه في ملف الأعمال.",
+
+    "viewRepository": "عرض المستودع",
+    "viewDemo": "عرض العرض التوضيحي",
+    "demoUnavailable": "العرض التوضيحي لم يعد متاحًا. :("
   },
   "resume": {
     "sectionSubtitle": "شاهد سيرتي الذاتية ولا تتردد في التواصل",
