--- a/front/src/locales/en/translation.json
+++ b/front/src/locales/en/translation.json
@@ -15,15 +15,15 @@
     "skill3": "NodeJs",
     "skill4": "CSS",
     "skill5": "HTML5"
-  },  "nav": {
+  },
+  "nav": {
     "home": "Home",
     "features": "Features",
     "portfolio": "Portfolio",
     "resume": "Resume",
     "contact": "Contact"
   },
-  "feature":
-  {
+  "feature": {
     "sectionTitle": "Features",
     "title": "What I Do",
     "cards": [
@@ -46,49 +46,50 @@
     ]
   },
   "portfolio": {
-  "sectionSubtitle": "VISIT MY PORTFOLIO AND LEAVE YOUR FEEDBACK",
-  "sectionTitle": "My Portfolio",
-  "card": {
-    "category": "Web App Development",
-    "description": "A full-featured Learning Management System built with MERN stack, enabling user authentication, course management, and progress tracking"
+    "sectionSubtitle": "VISIT MY PORTFOLIO AND LEAVE YOUR FEEDBACK",
+    "sectionTitle": "My Portfolio",
+    "card": {
+      "category": "Web App Development",
+      "description": "A full-featured Learning Management System built with MERN stack, enabling user authentication, course management, and progress tracking",
+      "description2": "A Partially completed E-commerce Front End only application."
+    }
+  },
+  "oneportfolio": {
+    "projectDemo": "Project Demo",
+    "fullStackRole": "Full Stack Role",
+    "fullStackRole2": "UI/UX Role",
+    "projectTitle": "Learning Management System — LMS.",
+    "projectTitle2": "My E-Shop",
+
+    "projectDescription": "This project is a full-stack web application built with React for the frontend, Node.js and Express for the backend, and Sequelize for managing the database. The frontend uses Material-UI (MUI) for a modern, responsive UI. The app allows users to interact with a database through RESTful APIs, with Sequelize handling data models and database queries. Users can sign up, log in, and manage data, with the backend providing authentication via JWT. The frontend dynamically updates based on user actions and data fetched from the server, ensuring a seamless experience. The application is designed to be scalable, with efficient error handling and clean UI components.",
+    "projectDescription2": "This is a frontend-only e-commerce application built with React.js and styled using Chakra UI. It fetches product data from the public Fake Store API to simulate a basic online shopping experience. The application features a responsive design, a product listing interface, and individual product detail views, all handled through client-side routing. It serves as a simple yet effective demonstration of building modern user interfaces using React with real-looking mock data, suitable for learning or portfolio purposes.",
+
+    "viewRepository": "View Repository",
+    "viewDemo": "VIEW DEMO",
+    "demoUnavailable": "Live demo is no longer available. :("
+  },
+  "resume": {
+    "sectionSubtitle": "VIEW MY RESUME AND FEEL FREE TO REACH OUT",
+    "sectionTitle": "My Resume"
+  },
+  "contact": {
+    "sectionSubtitle": "HAVE QUESTIONS OR OPPORTUNITIES? I’D LOVE TO HEAR FROM YOU",
+    "sectionTitle": "CONTACT ME",
+    "emailSectionTitle": "E-Mail Me",
+    "form": {
+      "nameLabel": "Your Name",
+      "emailLabel": "Your Email",
+      "messageLabel": "Message",
+      "sendButton": "Send Message",
+      "thankYou": "Thanks, I'll be in touch!",
+      "sentAlert": "Your message has been sent!"
+    }
+  },
+  "feedback": {
+    "title": "Leave Feedback",
+    "placeholder": "Tell me what you think…",
+    "submitButton": "Submit Feedback",
+    "thankYou": "Thanks for your feedback!",
+    "receivedAlert": "Feedback received!"
   }
-},
-"oneportfolio": {
-  "projectDemo": "Project Demo",
-  "fullStackRole": "Full Stack Role",
-  "projectTitle": "Learning Management System — LMS.",
-  "projectDescription": "This project is a full-stack web application built with React for the frontend, Node.js and Express for the backend, and Sequelize for managing the database. The frontend uses Material-UI (MUI) for a modern, responsive UI. The app allows users to interact with a database through RESTful APIs, with Sequelize handling data models and database queries. Users can sign up, log in, and manage data, with the backend providing authentication via JWT. The frontend dynamically updates based on user actions and data fetched from the server, ensuring a seamless experience. The application is designed to be scalable, with efficient error handling and clean UI components.",
-  "viewRepository": "View Repository",
-  "viewDemo": "VIEW DEMO",
-  "demoUnavailable": "Live demo is no longer available. :("
-},
-"resume": {
-  "sectionSubtitle": "VIEW MY RESUME AND FEEL FREE TO REACH OUT",
-  "sectionTitle": "My Resume"
-},
-"contact": {
-  "sectionSubtitle": "HAVE QUESTIONS OR OPPORTUNITIES? I’D LOVE TO HEAR FROM YOU",
-  "sectionTitle": "CONTACT ME",
-  "emailSectionTitle": "E-Mail Me",
-  "form": {
-    "nameLabel": "Your Name",
-    "emailLabel": "Your Email",
-    "messageLabel": "Message",
-    "sendButton": "Send Message",
-    "thankYou": "Thanks, I'll be in touch!",
-    "sentAlert": "Your message has been sent!"
-  }
-},
-"feedback": {
-  "title": "Leave Feedback",
-  "placeholder": "Tell me what you think…",
-  "submitButton": "Submit Feedback",
-  "thankYou": "Thanks for your feedback!",
-  "receivedAlert": "Feedback received!"
-}
-
-
-
-
-
 }
